package observer;

/**
 * @author guoqing
 * @since ： 2018/5/24 21:44
 * description:
 */
public interface DisplayElement {
    void display();
}
