@startuml

interface Subject
interface Observer
interface DisplayElement

class WeatherData

class CurrentConditionsDisplay
class StatisticsDisplay
class ThirdPartyDisplay
class ForecastDisplay

Subject <|-- WeatherData

DisplayElement <|-- CurrentConditionsDisplay
Observer <|-- CurrentConditionsDisplay

DisplayElement <|--- StatisticsDisplay
Observer <|--- StatisticsDisplay


DisplayElement <|---- ThirdPartyDisplay
Observer <|---- ThirdPartyDisplay

DisplayElement <|----- ForecastDisplay
Observer <|----- ForecastDisplay

Observer "*" <- "1" Subject




@enduml